ExampleErrors/src/com/jake/example/errors/fields/Foo.java
package com.jake.example.errors.fields;

import javax.inject.Inject;

public class Foo implements IFoo {
	@Inject
	public Foo() {
	}
}
